--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "format": "npx prettier --write .",
     "lint": "npx eslint . --ext .ts --max-warnings=0"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.11.25",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
