--- a/.github/workflows/hw.js.yml
+++ b/.github/workflows/hw.js.yml
@@ -1,28 +1,22 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
-name: Node.js CI
-
+name: Playwright Tests
 on:
-
+  workflow_dispatch: # MANUAL TRIGGER
+  schedule:
+    # Check to generate your cron syntax: https://crontab.guru/
+    - cron: "5 6 * * *" # At 06:05 on every day
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+ run-tests:
+   timeout-minutes: 5
+   runs-on: ubuntu-latest
+   steps:
+     - uses: actions/checkout@v3
+     - uses: actions/setup-node@v3
+       with:
+         node-version: 18
+     - name: Install dependencies
+       run: npm ci
+     - name: Install Playwright Browsers
+       run: npx playwright install --with-deps
+     - name: Run Playwright tests
+       run: npm run test
